k8s-stuff/hcloud.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hcloud-csi
---
apiVersion: v1
kind: Namespace
metadata:
  name: hcloud-ccm
