k8s-stuff/openldap-stack-ha.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openldap
