k8s-stuff/s3-credentials-loki.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
