k8s-stuff/s3-credentials-mimir.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
